sys-apps/systemd-units-9999: Gustavo's suggestions for services-basic
The basic services have been synchronised with Lennart's db at

    http://0pointer.de/public/systemd-units/

The metalog.service is from Gustavo's overlay.

--- a/sys-apps/systemd-units/files/services-basic/syslog-ng.service
+++ b/sys-apps/systemd-units/files/services-basic/syslog-ng.service
@@ -1,11 +1,9 @@
 [Unit]
-Description=Syslog-ng
-DefaultDependencies=false
+Description=Next Generation System Logging Service
 
 [Service]
-Type=forking
-ExecStart=/usr/sbin/syslog-ng --pidfile /var/run/syslog-ng.pid
-PIDFile=/var/run/syslog-ng.pid
+ExecStart=/usr/sbin/syslog-ng --foreground
+Restart=always
 
 [Install]
 WantedBy=sysinit.target
