sys-apps/systemd-units-9999: Clean gdm.service
- Remove most explicit dependencies, hald stays, because its dbus file
  isn't right yet
- No need for pidfile

--- a/sys-apps/systemd-units/files/services-desktop/gdm.service
+++ b/sys-apps/systemd-units/files/services-desktop/gdm.service
@@ -1,12 +1,11 @@
 [Unit]
 Description=Gnome Display Manager
-After=syslog.target dbus.target hald.service console-kit-daemon.service
+After=hald.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/gdm -nodaemon --pidfile /var/run/gdm.pid
+ExecStart=/usr/bin/gdm -nodaemon
 ExecStop=/usr/sbin/gdm-stop
-PIDFile=/var/run/gdm.pid
 
 [Install]
 Alias=display-manager.service
