sys-apps/systemd-units-9999: Update syslog-ng.service file
Compare with http://0pointer.de/public/systemd-units/rsyslog.service

--- a/sys-apps/systemd-units/files/services-basic/syslog-ng.service
+++ b/sys-apps/systemd-units/files/services-basic/syslog-ng.service
@@ -3,7 +3,6 @@ Description=Next Generation System Logging Service
 
 [Service]
 ExecStart=/usr/sbin/syslog-ng --foreground
-Restart=always
 
 [Install]
-WantedBy=sysinit.target
+WantedBy=multi-user.target
