fixes mysqld.service
mysqld seems to not fork into background on its own - fine with systemd.

--- a/sys-apps/systemd-units/files/services-server/mysqld.service
+++ b/sys-apps/systemd-units/files/services-server/mysqld.service
@@ -2,7 +2,7 @@
 Description=mySQL Server
 
 [Service]
-Type=forking
+Type=simple
 ExecStart=/usr/sbin/mysqld --defaults-file=/etc/mysql/my.cnf --basedir=/usr --datadir=/var/lib/mysql --pid-file=/var/run/mysqld/mysqld.pid --socket=/var/run/mysqld/mysqld.sock
 ExecStop=/bin/kill -15 $MAINPID
 PIDFile=/var/run/mysqld/mysql.pid
