--- a/sys-apps/systemd-units/files/services-server/apache2.service
+++ b/sys-apps/systemd-units/files/services-server/apache2.service
@@ -4,11 +4,15 @@ Description=Apache 2 HTTP Web Server
 [Service]
 Type=forking
 EnvironmentFile=/etc/conf.d/apache2
-ExecStart=/usr/sbin/apache2 -k start ${APACHE2_OPTS}
-ExecStop=/usr/sbin/apache2 -k graceful-stop ${APACHE2_OPTS}
-ExecReload=/usr/sbin/apache2 -k graceful ${APACHE2_OPTS}
+ExecStartPre=/bin/echo performing: /usr/sbin/apache2 -k start $APACHE2_OPTS
+ExecStart=/usr/sbin/apache2 -k start $APACHE2_OPTS
+ExecStop=/usr/sbin/apache2 -k graceful-stop $APACHE2_OPTS
+ExecReload=/usr/sbin/apache2 -k graceful $APACHE2_OPTS
 PIDFile=/var/run/apache2.pid
+StandardOutput=syslog
+StandardError=syslog
 Restart=always
 
 [Install]
 WantedBy=multi-user.target
+WantedBy=http-daemon.target
