sys-apps/systemd-units: dhcpcd.service update

--- a/sys-apps/systemd-units/files/services-desktop/dhcpcd.service
+++ b/sys-apps/systemd-units/files/services-desktop/dhcpcd.service
@@ -2,9 +2,7 @@
 Description=Dhcpcd
 
 [Service]
-Type=forking
-ExecStart=/sbin/dhcpcd -q
-PIDFile=/var/run/dhcpcd.pid
+ExecStart=/sbin/dhcpcd -q --nobackground
 
 [Install]
-WantedBy=graphical.target
+WantedBy=graphical.target network.target
