--- a/net-dns/dnsmasq/files/dnsmasq.service
+++ b/net-dns/dnsmasq/files/dnsmasq.service
@@ -1,13 +1,7 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; either version 2 of the License, or
-#  (at your option) any later version.
 
 [Unit]
-Description=dnsmasq
-After=syslog.socket
+Description=Small forwarding DNS server with DHCP and tftp support.
+After=network.target
 
 [Service]
 StandardOutput=syslog
