--- a/sys-apps/systemd-units/files/services-desktop/policykit-daemon.service
+++ b/sys-apps/systemd-units/files/services-desktop/policykit-daemon.service
@@ -4,8 +4,8 @@ After=syslog.target
 
 [Service]
 Type=dbus
-BusName=org.freedesktop.PolicyKit
-ExecStart=/usr/libexec/polkitd --no-exit
+BusName=org.freedesktop.PolicyKit1
+ExecStart=/usr/libexec/polkitd
 
 [Install]
 WantedBy=graphical.target
